fix: address correctness and Java 8 findings from PR #90 review
Four defects, each reproduced before fixing and re-checked after.

- Dijkstra_2: `List.of()` is Java 9+, but leetcode_java/pom.xml sets
  source/target 8, so the module did not build at the declared level.
  Replaced with Collections.emptyList(). The whole of AlgorithmJava and
  DataStructure now compiles under `javac --release 8`; this was the only
  offender.

- FloydWarshall_1: initialisation forced dist[i][i] = 0, overwriting a
  NEGATIVE self-loop -- erasing exactly the evidence hasNegativeCycle()
  looks for, so a one-vertex negative cycle reported false. Now keeps
  min(diagonal, 0), which preserves a negative self-loop while still
  treating a positive one as "never worth taking".

- Dijkstra_1: `distances[u] + weight` is int arithmetic and wrapped
  negative on a reachable path above Integer.MAX_VALUE, which then looked
  like a very short route and corrupted every distance downstream.
  Relaxation now widens to long. The residual limit -- Integer.MAX_VALUE
  doubling as the unreachable sentinel -- is documented rather than
  papered over; such a path now reports unreachable instead of negative.

- pq_1 ThreadSafePriorityQueue: dequeue() called is_empty() then get().
  Those are not atomic, and get() blocks by default, so a consumer that
  lost the race waited forever on a queue it had just seen as non-empty --
  in the one class whose entire purpose is thread safety. Now uses
  get_nowait() and translates queue.Empty into the documented IndexError.

Each fix carries a regression case in the file's own demo, including a
two-consumer contention test for the queue.

Two further review suggestions were not applied; see the PR discussion for
the reasoning.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>